--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "academy_center_project",
   "version": "0.1.0",
+  "homepage": "https://huybui2k1.github.io/project_sem1/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -34,6 +35,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "server": "node ./server/index.jsx"
   },
   "eslintConfig": {
